# icfpc

./: .clang-format  .gitmodules  README.md
2006/: .gitignore  Makefile  README.md  fast_um.cc  points.sh  run.sh  um.cc  um.h  um_main.cc
2006/bbarker/: 000.black  010.black  input.txt  input1.txt  input2.txt  input_rep.txt  run.sh
2006/ftd/: README.md  input.txt  run.sh
2006/gardener/: README  README.md  input.txt  puzzle10.ant  puzzle12.ant  puzzle13.ant  puzzle2.ant  run.sh  solve1.ant
2006/guest/: README.md  hack.bas  input.txt  input1.txt  input2.txt  run.sh
2006/hmonk/: README  README.md  advise.man  arith.adv  input.txt  input1.txt  input2.txt  input3.txt  run.sh  xml.adv
2006/howie/: README.md  battery.adv  blueprint.txt  codex.adv  console.txt  decrypt.py  decrypt.rml  display.adv  downloader.adv  finite_state.adv  gc.rml  gc2.rml  input.txt  input2.txt  input3.txt  jumper.adv  manifesto.txt  note.txt  package_robot.adv  pamphlet.txt  pousse_game.adv  power.adv  progress.adv  race_car.adv  robber.adv  rs232.adv  run.sh  sequel.py  textbook.txt  uploader.adv  usb.adv
2006/ohmega/: README.md  aspects.spec  input.txt  input1.txt  input2.txt  input3.txt  mult.2d  mult.spec  rev.2d  reverse.spec  run.sh
2007/: .gitignore  Makefile  README.md  dna2rna.cc  dna2rna.h  dna2rna_main.cc  dna2rna_test.cc  memo.md  rna2fuun.py  rna2fuun_test.py
2013/: .gitignore  Makefile  README.md  api.py  base.h  bench.py  expression.cc  expression.h  expression_test.cc  problem.cc  problem.h  problem_test.cc  solver.cc
2016/: .gitignore  README.md
2017/: .gitignore
2017/src/: CMakeLists.txt
2017/src/ai/: CMakeLists.txt  ai.cc  ai.h  punter_main.cc
2017/src/core/: CMakeLists.txt  base.h  communicator.cc  communicator.h  communicator_test.cc  game.cc  game.h  json.h  map.cc  map.h  protocol.cc  protocol.h  protocol_test.cc  punter.cc  punter.h  settings.h  time.cc  time.h
2017/src/server/: CMakeLists.txt  client.cc  client.h  offline_server.cc  offline_server.h  server.cc  server.h  server_main.cc
2018/: README.md
2019/: .gitignore  README.md
2020/: .gitignore  README.md
2021/: .gitignore  README.md
2022/: .gitignore  README.md
2023/: .gitignore  Cargo.toml  README.md
2023/data/html/: index.html  solution.html
2023/data/solution/: solution-1.json  solution-10.json  solution-11.json  solution-12.json  solution-13.json  solution-14.json  solution-15.json  solution-16.json  solution-17.json  solution-18.json  solution-19.json  solution-2.json  solution-20.json  solution-21.json  solution-22.json  solution-23.json  solution-24.json  solution-25.json  solution-26.json  solution-27.json  solution-28.json  solution-29.json  solution-3.json  solution-30.json  solution-31.json  solution-32.json  solution-33.json  solution-34.json  solution-35.json  solution-36.json  solution-37.json  solution-38.json  solution-39.json  solution-4.json  solution-40.json  solution-41.json  solution-42.json  solution-43.json  solution-44.json  solution-45.json  (+51 more)
2023/src/: README.md  base.rs  image.rs  lib.rs  problem.rs  solution.rs  spec.rs
2024/: .gitignore  README.md  index.md
(+3386 files in other folders)
