[package]
edition = "2021"
name = "icfpc2023"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
imageproc = "0.23.0"
opencv = "0.83.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = {version = "1.0.171", features = ["derive"]}
serde_json = "1.0.100"
